fixed the button ruiner and z-index

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,9 @@ body{
 
 .content-b{
     position:relative;
-    top:60px;
-    left:230px;
-    margin-left:200px;
+    top:46px;
+    left:200px;
+    margin-left:28px;
 }
 
 
