--- a/src/components/NotificationsComponent/notif.css
+++ b/src/components/NotificationsComponent/notif.css
@@ -1,10 +1,10 @@
 #btnPos{
     position: absolute;
+    left: 92vw;
     top: 0px;
     color: transparent;
-    z-index: 3;
-    right: 0px;
-    width: 50px;
+    z-index: 5;
+    width: 200px;
     height: 45px;
     background-color: transparent;
     border: none;
